Bug fixes
- Fixed new dropdown not populating due to jQuery not initialised
- Fixed z-index overlap of input boxes over function buttons
- Fixed syntax error preventing animation on copy button
- Re-added close button
- Fixed window size
- Maybe some other stuff too

--- a/app/css/stylesheet.css
+++ b/app/css/stylesheet.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0px;
     -webkit-app-region: drag;
     overflow: hidden;
+	background-color:#6889a8; 
 }
 
 .close-button {
@@ -9,12 +10,13 @@ html, body {
     border: none;
     background-color: #6889a8;
     position: absolute;
-    right: 4;
-    top: 3;
+    right: 5px;
+    top: 5px;
     color: white;
     font-size: 13px;
     font-family: 'Roboto', sans-serif;
     -webkit-app-region: no-drag;
+	z-index: 5;
 }
 
 .header {
@@ -23,6 +25,7 @@ html, body {
 	height:40px;
 	font-size: 24px;
 	font-family: "Raleway", sans-serif;
+    -webkit-app-region: drag;
 }
 
 .form-group {
@@ -32,8 +35,13 @@ html, body {
 	width: 100%;
 }
 
+label {
+	-webkit-app-region: no-drag;
+}
+
 .main-label {
 	float: left;
+	
 }
 
 .q-label {
@@ -93,16 +101,20 @@ textarea:focus {
 }
 
 #wrapper {
+	position: fixed;
+	top: 0px;
+	left: 0px;
 	width: 465px;
 	color:white;
-	margin:auto;
 	font-family: 'Raleway', sans-serif;
 	font-size: 13px;
 	padding-top:15px;
 	padding-left:15px;
 	padding-right:15px;
 	padding-bottom:15px;
-	background-color:#6889a8; 
+	z-index: 2;
+	background-color:#6889a8;
+    -webkit-app-region: no-drag;
 }
 
 .checkbox-carrier {
@@ -110,13 +122,21 @@ textarea:focus {
 }
 
 #reset-button {
+	position: fixed;
+	bottom: 15px;
+	left: 15px;
 	width: 108px;
 	float: left;
+	z-index: 1;
 }
 
 #copy-button {
+	position: fixed;
+	bottom: 15px;
+	right: 15px;
 	width: 140px;
 	float: right;
+	z-index: 1;
 }
 
 button {
